--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.71.1",
+    "@react-native-community/blur": "^4.3.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.1",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "redux-saga": "^1.2.2",
+    "react": "18.2.0",
+    "react-native": "0.71.1",
     "react-native-config": "^1.4.12",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
