--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.1",
+    "interpolate-range": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-config": "^1.4.12",
