--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.1",
-    "interpolate-range": "^2.1.0",
+    "axios": "^1.2.4",
+    "immer": "^9.0.18",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-config": "^1.4.12",
@@ -29,7 +30,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "redux-saga": "^1.2.2"
+    "redux-saga": "^1.2.2",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
