--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.4",
+    "dayjs": "^1.11.7",
     "immer": "^9.0.18",
     "react": "18.2.0",
     "react-native": "0.71.1",
@@ -27,6 +28,7 @@
     "react-native-screens": "^3.19.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
